# borc-deprecated

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  borc.sh  borcfile.yaml  main.borc  project.borc
definitions/: gcc.yaml  ld.yaml  vc.yaml
definitions/build-tools/: nasm.yaml
docs/: tasks.txt
docs/design/: analysis.txt  description.txt  design.old.txt  requirements.txt  solution.txt  specification.txt  textual-analysis.txt  user-stories.txt
docs/source/: index.rst
samples/hello-world/: borcfile.yaml
samples/hello-world/src/: main.cpp
src/borc/: CMakeLists.txt  ConsoleApp.cpp  ConsoleApp.hpp  Main.cpp  Program.cpp
src/borc-core/: CMakeLists.txt
src/borc-core/borc/: CommandTask.cpp  CppProject.cpp  CppProject.hpp  CppProjectParser.cpp  CppProjectParser.hpp  CppTarget.cpp  CppTarget.hpp  FileType.cpp  FileTypeRegistry.hpp  FileTypeRegistryImpl.cpp  FileTypeRegistryImpl.hpp  Language.cpp  Language.hpp  Project.cpp  Project.hpp  ProjectParser.hpp  SerialTaskPerformer.cpp  SerialTaskPerformer.hpp  Something.cpp  Something.hpp  Target.cpp  Target.hpp  TaskPerformer.hpp  TreeNode.hpp  Version.cpp  Version.hpp
src/borc-core/borc/cpp/: CppProject.hpp
src/borc-core/borc/pom/: ModuleTarget.cpp  ModuleTarget.hpp  Project.cpp  Project.hpp  ProjectParserMock.cpp  ProjectParserMock.hpp  ProjectParserYaml.cpp  ProjectParserYaml.hpp  Target.hpp  TargetImpl.cpp  TargetImpl.hpp  TargetType.cpp  TargetType.hpp
src/borc-core/borc/tasks/: DirectoryTask.cpp  TaskHierarchy.hpp  TaskNode.cpp  TaskNode.hpp  TaskNodeVisitor.cpp  TaskNodeVisitor.hpp  TaskNodeVisitorSerial.cpp  TaskNodeVisitorSerial.hpp
src/borc-core/borc/toolchains/: CompilerCpp.hpp  CompilerImpl.cpp  CompilerImpl.hpp  LinkerCpp.hpp  LinkerImpl.cpp  LinkerImpl.hpp  ToolchainCpp.cpp  ToolchainImpl.cpp  ToolchainImpl.hpp
src/borc-core/borc/toolsets/: CompilerCpp.cpp  CompilerCpp.hpp  Linker.hpp  LinkerCpp.cpp  LinkerCpp.hpp  Toolset.cpp  Toolset.hpp  ToolsetCpp.cpp  ToolsetCpp.hpp  ToolsetImpl.cpp  ToolsetImpl.hpp
src/borc-lang-cpp/: CMakeLists.txt
src/borc-lang-cpp/borc/: LanguageCpp.cpp  LanguageCpp.hpp
src/borc-tdd/: CMakeLists.txt  MainTest.cpp  ProjectModelTest.cpp  TestSomething.cpp
src/borc-test/: CMakeLists.txt
src/borc-test/borc/: FileType.Test.cpp  FileTypeRegistryImpl.Test.cpp  Version.Test.cpp
src/borc/borc/: FileType.cpp  FileType.hpp  FileTypeRegistry.cpp  FileTypeRegistry.hpp  FileTypeRegistryImpl.cpp  FileTypeRegistryImpl.hpp  Project.hpp  ProjectParser.hpp  TaskHierarchy.hpp  TaskHierarchyImpl.cpp  TaskHierarchyImpl.hpp
src/borc/borc/cpp/: CppProject.hpp
src/borc/borc/pom/: Project.cpp  Project.hpp  ProjectParser.cpp  ProjectParserMock.cpp  Source.cpp  Source.hpp  Target.cpp  Target.hpp
src/borc/borc/tasks/: TaskNode.cpp  TaskNodeVisitorSerial.cpp
src/borc/borc/toolchains/: Compiler.cpp  Compiler.hpp  CompilerImpl.cpp  CompilerImpl.hpp  Linker.cpp  Linker.hpp  LinkerImpl.cpp  Toolchain.cpp  Toolchain.hpp  ToolchainCpp.cpp  ToolchainCpp.hpp  ToolchainImpl.cpp  ToolchainImpl.hpp
uml/borc/: 128002  128002.diagram  128003.diagram  128130  128258  128386  2.session  3.session  borc.prj
